nikon_microscope/PI_GCS2_DLL.h

/////////////////////////////////////////////////////////////////////////////
// optical boards (hexapod)
BOOL PI_FUNC_DECL PI_SGA(int ID, const int* piAnalogChannelIds, const int* piGainValues, int iArraySize);
BOOL PI_FUNC_DECL PI_qSGA(int ID, const int* piAnalogChannelIds, int* piGainValues, int iArraySize);
BOOL PI_FUNC_DECL PI_NAV(int ID, const int* piAnalogChannelIds, const int* piNrReadingsValues, int iArraySize);
BOOL PI_FUNC_DECL PI_qNAV(int ID, const int* piAnalogChannelIds, int* piNrReadingsValues, int iArraySize);
// more hexapod specific
BOOL    PI_FUNC_DECL    PI_GetDynamicMoveBufferSize(int ID, int *iSize);
/////////////////////////////////////////////////////////////////////////////
// PIShift
BOOL PI_FUNC_DECL PI_qCOV(int ID, const int* piChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_MOD(int ID, const char* szItems, const unsigned int* iModeArray, const char* szValues);
BOOL PI_FUNC_DECL PI_qMOD(int ID, const char* szItems, const unsigned int* iModeArray, char* szValues, int iMaxValuesSize);
BOOL PI_FUNC_DECL PI_qDIA(int ID, const unsigned int* iIDArray, char* szValues,  int iBufferSize, int iArraySize);
BOOL PI_FUNC_DECL PI_qHDI(int ID, char* szBuffer,  int iBufferSize);
/////////////////////////////////////////////////////////////////////////////
// HID
BOOL PI_FUNC_DECL PI_qHIS (int ID, char* szBuffer,  int iBufferSize);
BOOL PI_FUNC_DECL PI_HIS  (int ID, const int* iDeviceIDsArray, const int* iItemIDsArray, const int* iPropertyIDArray, const char* szValues, int iArraySize);
BOOL PI_FUNC_DECL PI_qHIE (int ID, const int* iDeviceIDsArray, const int* iAxesIDsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qHIB (int ID, const int* iDeviceIDsArray, const int* iButtonIDsArray, int* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_HIL  (int ID, const int* iDeviceIDsArray, const int* iLED_IDsArray, const int* pnValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qHIL (int ID, const int* iDeviceIDsArray, const int* iLED_IDsArray, int* pnValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_HIN  (int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qHIN (int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_HIA  (int ID, const char* szAxes, const int* iFunctionArray, const int* iDeviceIDsArray, const int* iAxesIDsArray);
BOOL PI_FUNC_DECL PI_qHIA (int ID, const char* szAxes, const int* iFunctionArray, int* iDeviceIDsArray, int* iAxesIDsArray);
BOOL PI_FUNC_DECL PI_HDT  (int ID, const int* iDeviceIDsArray, const int* iAxisIDsArray, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qHDT (int ID, const int* iDeviceIDsArray, const int* iAxisIDsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_HIT  (int ID, const int* piTableIdsArray, const int* piPointNumberArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qHIT (int ID, const int* piTableIdsArray,  int iNumberOfTables,  int iOffsetOfFirstPointInTable,  int iNumberOfValues, double** pdValueArray, char* szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
/////////////////////////////////////////////////////////////////////////////
BOOL PI_FUNC_DECL PI_qMAN(int ID, const char* szCommand, char* szBuffer,  int iBufferSize);
/////////////////////////////////////////////////////////////////////////////
BOOL PI_FUNC_DECL PI_KSF  (int ID, const char* szNameOfCoordSystem);
BOOL PI_FUNC_DECL PI_KEN  (int ID, const char* szNameOfCoordSystem);
BOOL PI_FUNC_DECL PI_KRM  (int ID, const char* szNameOfCoordSystem);
BOOL PI_FUNC_DECL PI_KLF  (int ID, const char* szNameOfCoordSystem);
BOOL PI_FUNC_DECL PI_KSD  (int ID, const char* szNameOfCoordSystem, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_KST  (int ID, const char* szNameOfCoordSystem, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_KSW  (int ID, const char* szNameOfCoordSystem, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_KLD  (int ID, const char* szNameOfCoordSystem, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_KSB  (int ID, const char* szNameOfCoordSystem, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_MRT  (int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_MRW  (int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qKLT (int ID, const char* szStartCoordSystem, const char* szEndCoordSystem, char* buffer, int bufsize);
BOOL PI_FUNC_DECL PI_qKEN (int ID, const char* szNamesOfCoordSystems, char* buffer, int bufsize);
BOOL PI_FUNC_DECL PI_qKET (int ID, const char* szTypes, char* buffer, int bufsize);
BOOL PI_FUNC_DECL PI_qKLS (int ID, const char* szNameOfCoordSystem, const char* szItem1, const char* szItem2, char* buffer, int bufsize);
BOOL PI_FUNC_DECL PI_KLN  (int ID, const char* szNameOfChild, const char* szNameOfParent);
BOOL PI_FUNC_DECL PI_qKLN (int ID, const char* szNamesOfCoordSystems, char* buffer, int bufsize);
BOOL PI_FUNC_DECL PI_qTRA (int ID, const char* szAxes, const double* pdComponents, double* pdValueArray);
BOOL PI_FUNC_DECL PI_qKLC (int ID, const char* szNameOfCoordSystem1, const char* szNameOfCoordSystem2, const char* szItem1, const char* szItem2, char* buffer, int bufsize);
BOOL PI_FUNC_DECL PI_KCP  (int ID, const char* szSource, const char* szDestination);
/////////////////////////////////////////////////////////////////////////////
// Trajectory
BOOL PI_FUNC_DECL PI_TGA(int ID, const int* piTrajectoriesArray, const double* pdValarray, int iArraySize);
BOOL PI_FUNC_DECL PI_TGC(int ID, const int* piTrajectoriesArray, int iArraySize);
BOOL PI_FUNC_DECL PI_TGF(int ID, const int* piTrajectoriesArray, int iArraySize);
BOOL PI_FUNC_DECL PI_TGS(int ID, const int* piTrajectoriesArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTGL(int ID, const int* piTrajectoriesArray, int* iTrajectorySizesArray, int iArraySize);
BOOL PI_FUNC_DECL PI_TGT(int ID, int iTrajectoryTiming);
BOOL PI_FUNC_DECL PI_qTGT(int ID, int* iTrajectoryTiming);
/////////////////////////////////////////////////////////////////////////////
/// Surface scan
BOOL PI_FUNC_DECL PI_FSF(int ID, const char* szAxis, double forceValue1, double positionOffset, BOOL useForceValue2, double forceValue2);
BOOL PI_FUNC_DECL PI_qFSF(int ID, const char* szAxes, double* pForceValue1Array, double* pPositionOffsetArray, double* pForceValue2Array);
BOOL PI_FUNC_DECL PI_qFSR(int ID, const char* szAxes, BOOL* pbValueArray);
/////////////////////////////////////////////////////////////////////////////
// Spezial
BOOL    PI_FUNC_DECL    PI_GetSupportedParameters(int ID, int* piParameterIdArray, int* piCommandLevelArray, int* piMemoryLocationArray, int* piDataTypeArray, int* piNumberOfItems, const int iiBufferSize, char* szParameterName, const int iMaxParameterNameSize);
BOOL    PI_FUNC_DECL    PI_GetSupportedControllers(char* szBuffer, int iBufferSize);
int     PI_FUNC_DECL    PI_GetAsyncBufferIndex(int ID);
BOOL    PI_FUNC_DECL    PI_GetAsyncBuffer(int ID, double** pdValueArray);
BOOL    PI_FUNC_DECL    PI_AddStage(int ID, const char* szAxes);
BOOL    PI_FUNC_DECL    PI_RemoveStage(int ID, const char* szStageName);
BOOL    PI_FUNC_DECL    PI_OpenUserStagesEditDialog(int ID);
BOOL    PI_FUNC_DECL    PI_OpenPiStagesEditDialog(int ID);