nikon_microscope/PI_GCS2_DLL.bas


/////////////////////////////////////////////////////////////////////////////
// optical boards (hexapod)
Public Declare Function PI_SGA  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piAnalogChannelIds As Long, ByRef piGainValues As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qSGA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piAnalogChannelIds As Long, ByRef piGainValues As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_NAV  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piAnalogChannelIds As Long, ByRef piNrReadingsValues As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qNAV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piAnalogChannelIds As Long, ByRef piNrReadingsValues As Long, ByVal iArraySize As Long) As Long

// more hexapod specific
Public Declare Function PI_GetDynamicMoveBufferSize Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iSize As Long) As Long

/////////////////////////////////////////////////////////////////////////////
// PIShift
Public Declare Function PI_qCOV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_MOD  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szItems As String, ByRef iModeArray As Long, ByVal szValues As String) As Long
Public Declare Function PI_qMOD Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szItems As String, ByRef iModeArray As Long, ByVal szValues As String, ByVal iMaxValuesSize As Long) As Long

Public Declare Function PI_qDIA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iIDArray As Long, ByVal szValues As String, ByVal iBufferSize As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qHDI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long

'//>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> TODO

'/////////////////////////////////////////////////////////////////////////////
'// HID
Public Declare Function PI_qHIS  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_HIS   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDeviceIDsArray As Long, ByRef iItemIDsArray As Long, ByRef iPropertyIDArray As Long, ByVal szValues As String, ByVal iArraySize As Long) As Long
Public Declare Function PI_qHIE  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDeviceIDsArray As Long, ByRef iAxesIDsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qHIB  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDeviceIDsArray As Long, ByRef iButtonIDsArray As Long, ByRef pbValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_HIL   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDeviceIDsArray As Long, ByRef iLED_IDsArray As Long, ByRef pnValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qHIL  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDeviceIDsArray As Long, ByRef iLED_IDsArray As Long, ByRef pnValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_HIN   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_qHIN  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long
Public Declare Function PI_HIA   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iFunctionArray As Long, ByRef iDeviceIDsArray As Long, ByRef iAxesIDsArray As Long) As Long
Public Declare Function PI_qHIA  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef iFunctionArray As Long, ByRef iDeviceIDsArray As Long, ByRef iAxesIDsArray As Long) As Long
Public Declare Function PI_HDT   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDeviceIDsArray As Long, ByRef iAxisIDsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qHDT  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDeviceIDsArray As Long, ByRef iAxisIDsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_HIT   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTableIdsArray As Long, ByRef piPointNumberArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qHIT  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTableIdsArray As Long, ByVal iNumberOfTables As Long, ByVal iOffsetOfFirstPointInTable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Long, ByVal szGcsArrayHeader As String, ByVal iGcsArrayHeaderMaxSize As Long) As Long

'/////////////////////////////////////////////////////////////////////////////
Public Declare Function PI_qMAN  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szCommand As String, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long

'/////////////////////////////////////////////////////////////////////////////
Public Declare Function PI_KSF   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String) As Long
Public Declare Function PI_KEN   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String) As Long
Public Declare Function PI_KRM   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String) As Long
Public Declare Function PI_KLF   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String) As Long
Public Declare Function PI_KSD   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_KST   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_KSW   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_KLD   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_KSB   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_MRT   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_MRW   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qKLT  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szStartCoordSystem As String, ByVal szEndCoordSystem As String, ByVal buffer As String, ByVal bufsize As Long) As Long
Public Declare Function PI_qKEN  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNamesOfCoordSystems As String, ByVal buffer As String, ByVal bufsize As Long) As Long
Public Declare Function PI_qKET  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szTypes As String, ByVal buffer As String, ByVal bufsize As Long) As Long
Public Declare Function PI_qKLS  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem As String, ByVal szItem1 As String, ByVal szItem2 As String, ByVal buffer As String, ByVal bufsize As Long) As Long
Public Declare Function PI_KLN   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfChild As String, ByVal szNameOfParent As String) As Long
Public Declare Function PI_qKLN  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNamesOfCoordSystems As String, ByVal buffer As String, ByVal bufsize As Long) As Long
Public Declare Function PI_qTRA  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pdComponents As Double, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qKLC  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szNameOfCoordSystem1 As String, ByVal szNameOfCoordSystem2 As String, ByVal szItem1 As String, ByVal szItem2 As String, ByVal buffer As String, ByVal bufsize As Long) As Long
Public Declare Function PI_KCP   Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szSource As String, ByVal szDestination As String) As Long


'/////////////////////////////////////////////////////////////////////////////
'// Trajectory
Public Declare Function PI_TGA  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTrajectoriesArray As Long, ByRef pdValarray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_TGC  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTrajectoriesArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_TGF  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTrajectoriesArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_TGS  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTrajectoriesArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTGL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTrajectoriesArray As Long, ByRef iTrajectorySizesArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_TGT  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iTrajectoryTiming As Long) As Long
Public Declare Function PI_qTGT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iTrajectoryTiming As Long) As Long

'/////////////////////////////////////////////////////////////////////////////
'/// Surface scan
Public Declare Function PI_FSF  Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxis As String, ByVal forceValue1 As Double, ByVal positionOffset As Double, ByVal useForceValue2 As Long, ByVal forceValue2 As Double) As Long
Public Declare Function PI_qFSF Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pForceValue1Array As Double, ByRef pPositionOffsetArray As Double, ByRef pForceValue2Array As Double) As Long
Public Declare Function PI_qFSR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String, ByRef pbValueArray As Long) As Long



'/////////////////////////////////////////////////////////////////////////////
'// Spezial
Public Declare Function PI_GetSupportedParameters Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piParameterIdArray As Long, ByRef piComandLevelArray As Long, ByRef piMennoryLocationArray As Long, ByRef piDataTypeArray As Long, ByRef piNumberOfItems As Long, ByVal iiBufferSize As Long, ByVal szParameterName As String, ByVal iMaxParameterNameSize As Long) As Long
Public Declare Function PI_GetSupportedControllers Lib "PI_GCS2_DLL.dll" (ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_GetAsyncBufferIndex Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_GetAsyncBuffer Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef pdValueArray() As Double) As Long


Public Declare Function PI_AddStage Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_RemoveStage Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szStageName As String) As Long
Public Declare Function PI_OpenUserStagesEditDialog Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_OpenPiStagesEditDialog Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
